--- a/src/templates/reset-password-email.html
+++ b/src/templates/reset-password-email.html
@@ -8,6 +8,10 @@
 
   <body>
     <h1 style="color: blue">Hello, {{name}}!</h1>
+    <p>
+      You have made a request to change your account password. The link is valid
+      for 5 minutes.
+    </p>
     <p>Click <a href="{{link}}">here</a> to reset your password!</p>
   </body>
 </html>
